# aider_discussion

./: .aider.chat.history.md  .gitignore  README.md  cabal run  package-lock.json  └── README.md          - This file
1.  **haskell\_features/src/: Main.hs
[1] **haskell\_features/src/: Main.hs
api_test_server/: .gitignore  package-lock.json  package.json  readme.md  server.js
deepseek/: example1.py  tools.py
grok/: image.py  main.py  streaming.py
haskell_features/: Haskell_features.cabal  Main.hs
haskell_features/src/: Main.hs  TH.hs
lib/: main.dart
lib/core/error/: exceptions.dart  failures.dart
lib/core/network/: connectivity_service.dart  network_info.dart
lib/core/sync/: sync_manager.dart  sync_operation.dart
lib/core/utils/: input_validator.dart
lib/data/models/: user_model.dart
lib/data/repositories/: auth_repository_impl.dart
lib/di/: injection_container.dart
lib/domain/repositories/: auth_repository.dart
lib/domain/usecases/: get_current_user_usecase.dart  login_usecase.dart  logout_usecase.dart  register_usecase.dart
lib/presentation/pages/: home_page.dart  login_page.dart  register_page.dart
ruby/: astar.rb  astar_test.rb  bellman_ford.rb  bellman_ford_test.rb  dijkstra.rb  dijkstra_test.rb
server_to_server/: Dockerfile  README.md  docker-compose.yml  package.json
server_to_server/src/: index.js
server_to_server/src/api/: routes.js
server_to_server/src/config/: config.js
server_to_server/src/messaging/: queue.js
server_to_server/src/middleware/: circuitBreaker.js  idempotency.js
(+9 files in other folders)
