cabal-version:      3.0
name:               haskell-features
version:            0.1.0.0
build-type:         Simple

executable haskell-features
  main-is:          Main.hs
  hs-source-dirs:   src
  build-depends:    base >=4.14,
                    lens >=5.3,
                    async >=2.2.4,
                    stm >=2.5,
                    mtl >=2.3,
                    transformers >=0.6,
                    template-haskell >=2.18,
                    contravariant >=1.5.5,
                    comonad >=5.0.9,
                    vector >=0.13,
                    concurrent-extra >=0.7,
                    lens >=5.3.1
  default-language: Haskell2010
  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N
